--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -19,7 +19,7 @@ jobs:
       run: npm clean-install
     - name: Run linter
       run: npm run lint
-      
+
   unit-tests:
     runs-on: ubuntu-latest
     steps:
@@ -32,7 +32,7 @@ jobs:
       run: npm clean-install
     - name: Run unit tests
       run: npm run test-unit
-    - if: success() || faliture()
+    - if: success() || failure()
       uses: actions/upload-artifact@v3  
       with: 
         name: unit-test-${{ github.sha }}
